--- a/data/.htaccess
+++ b/data/.htaccess
@@ -1,1 +1,4 @@
-Require all denied
+# Redirige la raíz al directorio /p/
+RewriteEngine On
+RewriteCond %{REQUEST_URI} ^/$
+RewriteRule ^$ /p/ [L,R=301]
