--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,21 +1,15 @@
 FROM php:8.2-apache
 
-# Copiar solo lo que FreshRSS necesita
-COPY app/ /var/www/html/app/
-COPY cli/ /var/www/html/cli/
-COPY data/ /var/www/html/data/
-COPY extensions/ /var/www/html/extensions/
-COPY lib/ /var/www/html/lib/
-COPY tests/ /var/www/html/tests/
-COPY index.php /var/www/html/
-COPY config.default.php /var/www/html/
-COPY README.md /var/www/html/
+# Copiar todo FreshRSS al contenedor
+COPY . /var/www/html/
 
 # Ajustar permisos
-RUN chown -R www-data:www-data /var/www/html/
+RUN chown -R www-data:www-data /var/www/html/ \
+    && a2enmod rewrite
 
 # Exponer puerto 80
 EXPOSE 80
 
-# Iniciar Apache en primer plano
+# Iniciar Apache
 CMD ["apache2-foreground"]
+
