--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,15 +1,17 @@
 FROM php:8.2-apache
 
-# Copiar todo FreshRSS al contenedor
-COPY . /var/www/html/
+# Activar mod_rewrite (lo necesita FreshRSS)
+RUN a2enmod rewrite
 
-# Ajustar permisos
-RUN chown -R www-data:www-data /var/www/html/ \
-    && a2enmod rewrite
+# Copiar el script de build
+COPY .render-build.sh /usr/local/bin/.render-build.sh
+RUN chmod +x /usr/local/bin/.render-build.sh
 
-# Exponer puerto 80
+# Ejecutar el script de build
+RUN /usr/local/bin/.render-build.sh
+
+# Exponer puerto
 EXPOSE 80
 
 # Iniciar Apache
 CMD ["apache2-foreground"]
-
